Corrected the mobile view, the components are center aligned

--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -5,7 +5,7 @@
   background-color: #308a69;
   border-radius: 15px;
   padding: 73px;
-  margin-top:140px;
+  margin-top:140px;  
   z-index: 1;
   margin-left: 10%;
   margin-right: 10%;
@@ -92,10 +92,13 @@
 
 @media screen and (max-width:830px) {
   .container{
-    margin: 5%;  
+    margin: 5%;
     margin-top:50px; 
   }
   .title{
+    margin: 5%;  
+    font-size: 30px;
+    font-weight: 900;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -106,13 +109,5 @@
   }
   .aboutImage{
     display: none;
-  }
-  .aboutItems{
-    margin-top: 30px;
-  }
-
-  .aboutItem{
-    padding-left: 0;
-    padding-right: 0;
   }
 }
