--- a/src/Components/Experience/Experience.module.css
+++ b/src/Components/Experience/Experience.module.css
@@ -7,7 +7,7 @@
   padding: 69px;
   margin-left: 10%;
   margin-right: 10%;
-  background-color: #e484ce;
+  background-color: #8b006a;
   border-radius: 10px;
 }
 
@@ -108,10 +108,17 @@
 
 
 @media screen and (max-width:830px) {
-  .container{
-    
+  .container{    
     margin: 5%;
     margin-top:50px;    
+  }
+  .title{ 
+    font-size: 40px;
+    font-weight: 900;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 2%;
   }
   .content{
     flex-direction: column;
@@ -127,5 +134,16 @@
     width: 100%;
     gap:9px;
   }
+  .historyItem{
+    display: flex;
+    margin-left: -10%;
+    flex-direction: column;
+    width:120%;
+    align-items: center;
+    gap:15px;
+    border-radius: 10px;
+    padding-top: 14px;
+  }
+
   
 }
