--- a/src/Components/Hero/Hero.module.css
+++ b/src/Components/Hero/Hero.module.css
@@ -62,7 +62,7 @@
   z-index: 1;
   border-radius: 500px;
   animation-name: floating;
-  animation-duration: 5s;
+  animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
   
@@ -116,6 +116,7 @@
 
   .content{
     align-items: center;
+    margin: 10%;
   }
   .contactBtn{
     align-items: center;
