--- a/src/Components/Projects/Projects.module.css
+++ b/src/Components/Projects/Projects.module.css
@@ -31,8 +31,7 @@
 @media screen and (max-width:830px) {
   .container{
     flex-direction: column-reverse;
-    padding: 0;
-    margin:auto;
+    padding: 0;    
     margin: 5%;
     padding-bottom: 30px;
   }
